# arco

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Agent_Object.ipynb  Dockerfile  README.md  agent_api.py  pyproject.toml  requirements.txt  run_agent.py  test_cot_iterative_refinement.ipynb  test_full_pipeline.ipynb  test_per_step_config.ipynb  test_run_agent_artifacts.py
Agent/: __init__.py  cache.py  config.py  data_agent.py  parameter_provider.py  schema.py  state.py  steps.py  tracing.py  utils.py
config/: agent_config_jmeter.yaml  run_config.yaml  schema.json  test_bon_temperature.yaml  test_bon_top_k.yaml  test_bon_top_p.yaml  test_brand_revenue_bar.yaml
config/benchmark_config/: deepseek_v4_flash_perplexity.yaml  gpt_4.1_nano_fake.yaml  gpt_4.1_nano_planned_fake.yaml  high_temp_bench.yaml  low_temp_bench.yaml  mistral_small_3.2_24b_perplexity.yaml  schema.json
config/notebook_configs/: high_temp_bench.yaml  low_temp_bench.yaml
config/old/: test_bar_single_y.yaml  test_bon_temperature.yaml  test_bon_top_k.yaml  test_database_schema.yaml  test_line_chart_with_gt.yaml  test_region_revenue_grouped_bar.yaml
config/run_config/: minimal.yaml  orchestrated.yaml  planned.yaml  schema.json
config/run_config/test_config/: test_agents.yaml  test_cache_read.yaml  test_cache_read_write.yaml  test_cache_write.yaml  test_codecarbon.yaml  test_global.yaml  test_perplexity.yaml  test_provider.yaml  test_storage.yaml  test_tracing.yaml
config/search_spaces/: search_space_minimal.yaml
config/test_config/: test_agents.yaml  test_cache_read.yaml  test_cache_read_write.yaml  test_cache_write.yaml  test_codecarbon.yaml  test_perplexity.yaml  test_tracing.yaml
data/: generate_synthetic_tables.py  products.parquet  products_schema.yaml  sales_schema.yaml  stores.parquet  stores_schema.yaml
data/benchmarks/: benchmark_dataset.json  benchmark_dataset_old.json  fake_bench.json  gpt_columns_dataset.json  planned_benchmark_dataset.json  planned_fake_bench.json  visualization_dataset.json
data/scripts/: generate_synthetic_tables.py  gt_generation.py
docs/: benchmark_config.md  per_step_config_refactor.md  run_config.md
evaluation/: aggregate_results.py  benchmark_dataset.json  bulk_runner.py  gt_scoring_criteria.md  run_benchmark.py  search_space.py  search_space.yaml  search_space_gemma_practical.yaml  search_space_gemma_wide.yaml  test_iou_comprehensive.py  test_iou_current.py  test_run_benchmark.py  visualization_dataset.json  visualization_evaluation_results.csv
notebooks/: old_data_tests.ipynb  perplexity_analysis.ipynb  perplexity_correlation.ipynb
old_tests/: _quick_timeout_check.py  notebook_utils.py  test_cot_iterative_refinement.ipynb  test_full_pipeline.ipynb  test_iou_comprehensive.py  test_iou_current.py  test_multitable.ipynb  test_per_step_config.ipynb
output/benchmarks/: gpt_columns_bench_default.csv  gpt_columns_bench_judge.csv  high_temp_bench.csv  low_temp_bench.csv  mistral_small_3.2_24b_perplexity-[Baseline].csv  mistral_small_3.2_24b_perplexity-[Temperature_(high_-_1.2)].csv  mistral_small_3.2_24b_perplexity-[Temperature_(low_-_0.2)].csv  mistral_small_3.2_24b_perplexity-[Temperature_(medium_-_0.8)].csv
runs/bulk_results/local_test/: configs_sampled.json  summary.csv
runs/bulk_results/local_test_3/: configs_sampled.json  summary.csv
runs/bulk_results/validation/: summary.csv
runs/bulk_results/validation_10/: detail_combined.csv  detail_combined.xlsx
runs/bulk_results/validation_12/: detail_combined.csv  detail_combined.xlsx
runs/bulk_results/validation_2/: configs_sampled.json  detail.csv  summary.csv
runs/bulk_results/validation_3/: detail_combined.csv
scripts/: generate_synthetic_tables.py
scripts/evaluation/: bulk_runner.py  run_benchmark.py  search_space.py  search_space.yaml  test_iou_comprehensive.py  test_iou_current.py
src/arco/: cli.py  global_vars.py  llm_tools.py  logs.py  tracing.py  tracking.py  workflow.py
tesi/: Thesis.tex  bibliography.bib  main.fdb_latexmk  main.fls  main.tex
tesi/Configuration_files/: title_page.tex
test_code/: test_cot_iterative_refinement.ipynb  test_full_pipeline.ipynb  test_llm_timeout.py  test_multitable.ipynb  test_per_step_config.ipynb  test_run_agent_artifacts.py  test_tracing_runtime.py
tests/old_tests/: _quick_timeout_check.py  test_cot_iterative_refinement.ipynb  test_full_pipeline.ipynb  test_iou_comprehensive.py  test_iou_current.py  test_llm_timeout.py  test_multitable.ipynb  test_per_step_config.ipynb  test_tracing_runtime.py
(+594 files in other folders)
