[project]
name = "arco"
version = "0.1.0"
description = "Agentic Runtime Compute Optimizer"
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "Filippo Riva" }]


# --- Core Runtime Dependencies ---
# These are required for the application to function.
dependencies = [
    # LangGraph
    "langgraph>=1.2.0",
    "langgraph-sdk>=0.3.14",
    # LangChain
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.1",
    "langchain-ollama>=1.1.0",
    # LLM and models
    "ollama>=0.6.2",
    "llama-index>=0.14.22",
    # Tracing and Profiling
    "codecarbon>=3.2.7",
    # SQL, DuckDB and Data Management
    "pandas>=3.0.3",
    # Utils
    "numpy>=2.4.5",
    "requests>=2.34.2",
    "pyyaml",
    # Terminal and Visualization
    "rich>=15.0.0",
    "grandalf",
]


[project.urls]
# Arco is a fork from the original DataAgent project
"Original Project" = "https://github.com/ossaleon/DataAgent/tree/main"

[project.scripts]
arco = "arco.cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# --- Development & Workflows-specific extras ---
# These are only installed when explicitly requested (e.g., 'uv sync --all-extras' or 'uv sync --extra dev')
[dependency-groups]
sales = [
    "matplotlib>=3.11.1",
    "pyarrow>=25.0.0",
    "duckdb>=1.5.2",
]
dev = [
    "ruff>=0.16.0",
    "ipykernel>=7.2.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "scipy"
]
